sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:3: error: ';' expected but '=' found.
  Swap : Boolean = false
                 ^